css reset added

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Expo Manager</title>
+    <link rel="stylesheet" href="css/reset.css">
   </head>
   <body>
     <div id="app"></div>
