--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -3,10 +3,20 @@
   <head>
     <title>Expo Manager</title>
     <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <style>
+      .btn-primary { background-color: #4630eb; border-color: #4630eb; }
+    </style>
   </head>
   <body>
     <div id="app"></div>
     <script src="./app.js" data-container="#app"></script>
+    <script>if (typeof module === 'object') {window.module = module; module = undefined;}</script>
+    <script src="../../node_modules/jquery/dist/jquery.slim.min.js"></script>
+    <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+    $(function () { $('[data-toggle="tooltip"]').tooltip() })
+</script>
     <script>
     if (process.env.BROWSER_SYNC_CLIENT_URL) { const current = document.currentScript; const script =
 document.createElement('script'); script.src = process.env.BROWSER_SYNC_CLIENT_URL; script.async =
