more data on projects info page

--- a/app/renderer/index.html
+++ b/app/renderer/index.html
@@ -4,15 +4,7 @@
     <title>Expo Manager</title>
     <link rel="stylesheet" href="css/reset.css" />
     <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
-    <style>
-      .container-fluid {
-        min-width: 860px;
-      }
-      .btn-primary {
-        background-color: #4630eb;
-        border-color: #4630eb;
-      }
-    </style>
+    <link rel="stylesheet" href="css/ext.css" />
   </head>
   <body>
     <div id="app"></div>
